FPA-177 SuccessResponse Errors Fixes